# DeadKernel

./: .gitignore  CMakeLists.txt  README.md  bochsrc.txt  grub.cfg  utils.sh
kernel/: CMakeLists.txt
kernel/include/: multiboot.h
kernel/include/drivers/acpi/: acpi.h
kernel/include/drivers/bios32/: bios32.h
kernel/include/drivers/pci/: pci.h  pci_ids.h  pci_user.h
kernel/include/drivers/vesa/: vesa.h
kernel/include/fs/: block_device.h  fs.h  memory_device.h
kernel/include/fs/dfs/: dfs.h  dfs_inode.h  dfs_super.h
kernel/include/fs/elf/: elf.h
kernel/include/interrupts/: descriptor_tables.h  isr.h
kernel/include/io/: keyboard.h  screen.h  serial.h
kernel/include/memory_managment/: heap.h  kheap.h  paging.h  user_heap.h
kernel/include/modules/: modules.h
kernel/include/multitasking/: mutex.h  semaphore.h  syscall.h  systimer.h  task.h
kernel/include/utils/: common.h  cyclic_buffer.h  pipe.h  stackTrace.h  utils.h
kernel/src/: boot.s  kernel.c  main.c
kernel/src/drivers/acpi/: acpi.c  acpi_asm.s
kernel/src/drivers/bios32/: bios32.c  bios32_asm.s
kernel/src/drivers/pci/: pci.c  pci_user.c
kernel/src/drivers/vesa/: vesa_asm.s
kernel/src/fs/: block_device.c  fs.c  memory_device.c  super.c
kernel/src/fs/dfs/: dfs.c  dfs_inode.c  dfs_super.c
kernel/src/fs/elf/: elf.c
kernel/src/interrupts/: descriptor_tables.c  descriptor_tables_asm.s  interrupts.s  isr.c
kernel/src/io/: keyboard.c  screen.c  serial.c
kernel/src/memory_managment/: heap.c  kheap.c  paging.c  user_heap.c
kernel/src/modules/: modules.c
kernel/src/multitasking/: mutex.c  process.s  semaphore.c  syscall.c  systimer.c  task.c
kernel/src/utils/: common.c  cyclic_buffer.c  pipe.c  stackTrace.c  utils.s
modules/: CMakeLists.txt  link.ld
modules/shared/include/: syscall.h
modules/shared/include/drivers/pci/: pci.h
modules/shared/include/io/: keyboard.h  screen.h
modules/shared/include/multitasking/: semaphore.h
modules/shared/src/: boot.s  syscall_asm.s
modules/shared/src/io/: keyboard.c  screen.c
modules/shared/src/modules/: modules.c
modules/shared/src/pci/: pci.c
modules/shared_include/: common.h  syscall.h
modules/shared_src/: common.c  syscall.s
modules/shell/: CMakeLists.txt
modules/shell/src/: main.c
modules/testModule/: CMakeLists.txt
modules/testModule/src/: main.c
shared/include/: limits.h  llist.h  stdio.h  stdlib.h  types.h
shared/include/drivers/pci/: pci_ids.h  pci_types.h
shared/include/modules/: modules_types.h
shared/include/multitasking/: atomic.h  mutex.h  semaphore_types.h
shared/src/: math.c  stdlib.c  utils.s
shared/src/drivers/pci/: pci_ids.c
shared/src/multitasking/: atomic.c  mutex.c
src/: bochsrc.txt
src/initrd/: a.out  blockDevice.h  common.h  initrdFS.h  loopDevice.h  main.c  make_initrd.c  make_initrd.cpp  make_initrd.h  test.c
src/kernel/: Makefile  boot.s  common.c  common.h  common_asm.s  descriptor_tables.c  descriptor_tables.h  descriptor_tables_asm.s  fs.c  fs.h  initrd.c  initrd.h  interrupts.s  isr.c  isr.h  kernel  kernel.c  kheap.c  kheap.h  link.ld  main.c  multiboot.h  paging.c  paging.h  pci.c  pci.h  pci_ids.h  process.s  run_kernel.sh  screen.c  screen.h  syscall.c  syscall.h  systimer.c  systimer.h  task.c  task.h
src/kernel/asm/: bios32.s  boot.s  descriptor_tables_asm.s  interrupts.s  process.s
src/kernel/drivers/bios32/: bios32.c  bios32.h
src/kernel/drivers/pci/: pci.c  pci.h  pci_ids.h
src/kernel/fileReaders/: elf.c
src/kernel/fs/: fs.h
src/kernel/fs/elf/: elf.h
src/kernel/fs/ext2/: ext2.h
src/kernel/interrupts/: descriptor_tables.c  descriptor_tables.h  interrupts.s  isr.c  isr.h
src/kernel/io/: keyboard.c  keyboard.h  screen.c  screen.h  serial.c  serial.h
src/kernel/main/: kernel.c  main.c  multiboot.h
src/kernel/memoryManagment/: kheap.c  kheap.h  paging.c  paging.h
src/kernel/multitasking/: syscall.c  syscall.h  systimer.c  systimer.h  task.c  task.h
src/kernel/pci/: pci.c  pci.h  pci_ids.h
src/kernel/utils/: common.c  common.h  llist.h  stackTrace.c  stackTrace.h
src/modules/testModule/: Makefile  common.c  common.h  core  link.ld  main.c  syscall.h  syscall.s  testModule
