CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

FIND_PROGRAM(CMAKE_ASM_NASM_COMPILER NAMES yasm)
FIND_PROGRAM(CMAKE_LINKER NAMES ld)

ENABLE_LANGUAGE(ASM_NASM)

SET(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> <FLAGS> -o <OBJECT> <SOURCE>")
SET(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
SET(CMAKE_LINKER_FLAGS "-melf_i386")

SET(CMAKE_ASM_NASM_FLAGS "-felf")

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_FLAGS_RELEASE "")
SET(CMAKE_C_FLAGS "-m32 -g3 -fno-pic -fno-pie -nostdlib -nostdinc -fno-builtin -fno-stack-protector")

FILE(GLOB_RECURSE SHARED_SRC_FILES "shared/src/*.c")
FILE(GLOB_RECURSE SHARED_ASM_FILES "shared/src/*.s")

INCLUDE_DIRECTORIES(shared/include)

ADD_SUBDIRECTORY(kernel)
ADD_SUBDIRECTORY(modules)