CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(kernel)

ENABLE_LANGUAGE(ASM_NASM)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> <FLAGS> -o <OBJECT> <SOURCE>")
SET(CMAKE_ASM_NASM_FLAGS "-felf")

SET(CMAKE_LINKER /usr/bin/ld)
SET(LINKER_RULES_FILE ${CMAKE_CURRENT_SOURCE_DIR}/link.ld)
SET(CMAKE_EXE_LINKER_FLAGS "-melf_i386 -T ${LINKER_RULES_FILE}")
SET(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_FLAGS_RELEASE "")
SET(CMAKE_C_FLAGS "-m32 -g3 -fno-pic -fno-pie -nostdlib -nostdinc -fno-builtin -fno-stack-protector")

FILE(GLOB_RECURSE SRC_FILES "src/*.c")
FILE(GLOB_RECURSE ASM_FILES "src/*.s")

INCLUDE_DIRECTORIES(include)

SET_SOURCE_FILES_PROPERTIES(${ASM_FILES} PROPERTIES LANGUAGE ASM_NASM)
SET_SOURCE_FILES_PROPERTIES(${SHARED_ASM_FILES} PROPERTIES LANGUAGE ASM_NASM)

ADD_EXECUTABLE(${PROJECT_NAME} ${SHARED_ASM_FILES} ${ASM_FILES} ${SHARED_SRC_FILES} ${SRC_FILES})