SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/modules)
SET(LINKER_RULES_FILE ${CMAKE_CURRENT_SOURCE_DIR}/link.ld)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -T ${LINKER_RULES_FILE}")

FILE(GLOB_RECURSE SRC_FILES "shared/src/*.c")
FILE(GLOB_RECURSE ASM_FILES "shared/src/*.s")

LIST(APPEND SHARED_SRC_FILES ${SRC_FILES})
LIST(APPEND SHARED_ASM_FILES ${ASM_FILES})

INCLUDE_DIRECTORIES(shared/include)

ADD_SUBDIRECTORY(testModule)
ADD_SUBDIRECTORY(shell)

ADD_CUSTOM_TARGET(modules
    DEPENDS testModule
    DEPENDS shell
)