PROJECT(shell)

FILE(GLOB_RECURSE SRC_FILES "src/*.c")
FILE(GLOB_RECURSE ASM_FILES "src/*.s")

INCLUDE_DIRECTORIES(include)

SET_SOURCE_FILES_PROPERTIES(${ASM_FILES} PROPERTIES LANGUAGE ASM_NASM)
SET_SOURCE_FILES_PROPERTIES(${SHARED_ASM_FILES} PROPERTIES LANGUAGE ASM_NASM)

ADD_DEFINITIONS(-DMODULE_NAME="${PROJECT_NAME}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SHARED_ASM_FILES} ${ASM_FILES} ${SHARED_SRC_FILES} ${SRC_FILES})